2001-07-13  jacob berkman  <jacob@ximian.com>

	* main.c (main): initialize gconf if gtkhtml is gconf-enabled

2001-07-12  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_activate): Fix position of capplet name
	in the Bonobo case
	(capplet_new): Don't abort if the entry says to run gnomecc

2001-07-10  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_ok_cb): Notify property control of apply
	action
	(capplet_control_launch): Store PropertyControl in app

2001-07-09  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (gladedir): Update installation directory

	* capplet-dir-view.c (capplet_dir_view_show): Add g_return_if_fail
	macros

	* capplet-dir.c (capplet_control_launch): Create a control by
	first retrieving the PropertyControl and then extracting the
	control from it
	(capplet_control_launch): Connect button signals
	(capplet_cancel_cb): Implement. Just destroy the app widget
	(capplet_ok_cb): Ditto.
	(capplet_control_launch): Don't use a BonoboArg when setting the
	property
	(capplet_control_launch): Don't convert underscores to dashes in
	moniker

	* Makefile.am (INCLUDES): Update directory locations

	* capplet-dir.c (capplet_control_launch): Terminate the list of
	properties to set

2001-07-03  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Use GnomeDialog rather
	than BonoboWindow
	(capplet_control_launch): Use bonobo_widget_set_property for simplicity
	(capplet_control_launch): Eliminate goto statement with an if...else clause

	* main.c (main): Connect destroy signal on capplet window to
	gtk_main_quit

	* capplet-dir.c (capplet_control_launch): Return pointer to
	BonoboWindow

	* main.c (main): Check return value of capplet_control_launch

	* capplet-dir.c (capplet_control_launch): Use goto to make sure
	all data structures are freed

2001-07-02  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Use bonobo_arg_... functions
