@@ -1,3 +1,9 @@
+2001-07-13  Kai Lahmann  <kl@linuxfaqs.de>
+
+	* capplet-dir-view-html.c (header_populate): made the header
+	smaller - scrolling won't go
+	(html_populate): small fixes in html code
+
 2001-07-13  jacob berkman  <jacob@ximian.com>
 
 	* main.c (main): initialize gconf if gtkhtml is gconf-enabled
